--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <title>sdf...</title>
   </head>
   <body>
-    <main></main>
+    <div id="container">
+      <main id="main">
+        <section id="controler"></section>
+        <div id="resize-handle"></div>
+        <section id="p5canvas"></section>
+      </main>
+    </div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
